# genesis

./: .gitignore  CMakeLists.txt  README  README.md
.github/workflows/: build.yml
Modules/: AddCCompilerFlag.cmake  GetTriple.cmake
doc/: CREDITS  NATIVES  TODO
etc/: notes
genesis/: .gitignore  CMakeLists.txt  Makefile  README  README.pre-1.0  TODO  USING  configure  file-notes  notes  notes-FreeBSD  notes-ancestor-cache  notes-format  notes-multi  notes-random  notes-syntax  textdb.doc  todo
genesis/doc/: CHANGES  COPYRIGHT  CREDITS  NATIVES  README  TODO  Win32-INSTALL  meanderings
genesis/etc/: config.guess  guess_system  makerelease  notes  primes.b  version
genesis/src/: .cvsignore  INSTALL.sh  Makefile.borland  Makefile.in  backup-resolv  binarydb.c  buffer.c  cache.c  codegen.c  coldcc.c  control.c  crypt.c  data.c  db.c  dbpack.c  decode.c  defs.c  dict.c  dns-MOO.c  dns.c  dnsserv.c  dnsserv.core  dump.c  execute.c  file.c  functions.c  genesis.c  grammar.y  ident.c  install  io.c  list.c  log  log.c  lookup.c  lookup_bdb.c  malloc.c  match.c  memory.c  modules.c  (+17 more)
genesis/src/data/: Makefile.in  buffer.c  data.c  dict.c  handled_frob.c  ident.c  list.c  object.c  quickhash.c  string.c  string_tab.c
genesis/src/include/: .cvsignore  binarydb.h  buffer.h  cache.h  cdc_errs.h  cdc_memory.h  cdc_pcode.h  cdc_string.h  cdc_types.h  code_prv.h  codegen.h  coldcc.h  config.h.in  config.h.win32  crypt.h  data.h  db.h  dbpack.h  decode.h  defs.h  dict.h  dns.h  dump.h  execute.h  file.h  functions.h  grammar.h  handled_frob.h  ident.h  io.h  list.h  log.h  lookup.h  macros.h  match.h  memory.h  modules.h  native.h  net.h  object.h  (+11 more)
genesis/src/modules/: .cvsignore  Makefile.in  cdc.c  cdc.h  cdc.mod  cdc_buffer.c  cdc_dict.c  cdc_file.c  cdc_float.c  cdc_integer.c  cdc_list.c  cdc_misc.c  cdc_network.c  cdc_object.c  cdc_string.c  cdc_sys.c  cdc_time.c  coldcore_cml.c  coldcore_veil.c  core.c  core.h  core.mod  core_veil.c  ext_math.c  ext_math.mod  foo  mod.conf  modbuild  moddef.h  moduledef.h  moduledef.h.in  out  prodb.c  prodb.h  prodb.mod  sql.c  sql.h  sql.mod  veil.c  veil.h  (+4 more)
genesis/src/ops/: Makefile.in  buffer.c  data.c  dict.c  error.c  file.c  list.c  math.c  misc.c  network.c  object.c  operators.c  string.c  sys.c  task.c
genesis/test/: runtest  source  test.in
src/: binarydb.c  cache.c  codegen.c  coldcc.c  crypt.c  dbpack.c  decode.c  defs.c  dns.c  execute.c  file.c  genesis.c  grammar.y  io.c  log.c  lookup.c  lookup_bdb.c  lookup_lmdb.c  lookup_ndbm.c  memory.c  native.c  net.c  opcodes.c  regexp.c  shs.c  sig.c  strutil.c  textdb.c  token.c  util.c
src/data/: buffer.c  data.c  dict.c  handled_frob.c  ident.c  list.c  object.c  quickhash.c  string.c  string_tab.c
src/include/: binarydb.h  buffer.h  cache.h  cdc_db.h  cdc_memory.h  cdc_pcode.h  cdc_string.h  cdc_types.h  code_prv.h  codegen.h  coldcc.h  config.h.cmake  crypt.h  data.h  dbpack.h  decode.h  defs.h  dict.h  dns.h  execute.h  file.h  functions.h  grammar.h  io.h  list.h  log.h  lookup.h  macros.h  native.h  net.h  object.h  opcodes.h  operators.h  quickhash.h  sig.h  string_tab.h  strutil.h  textdb.h  token.h  util.h
src/modules/: cdc.c  cdc.h  cdc.mod  cdc_buffer.c  cdc_dict.c  cdc_integer.c  cdc_list.c  cdc_misc.c  cdc_string.c  ext_math.c  ext_math.h  ext_math.mod  mod.conf  modbuild  web.c
src/ops/: buffer.c  data.c  dict.c  file.c  list.c  math.c  misc.c  network.c  object.c  operators.c  string.c  sys.c  task.c
test/: driver.cdc  lib.cdc  runtest
test/cdc/: dicts.cdc  lists.cdc  math.cdc  strings.cdc  symbols.cdc  system.cdc
test/legacy/: runtest  test.in
